# tmt-lms-backend

./: .env.example  .gitignore  docker-compose.yaml
backend/: .dockerignore  Dockerfile.dev  pyproject.toml
backend/backend/: admin.py  celery.py  middlewares.py  settings.py  test_runner.py  urls.py
backend/config/: admin.py  models.py  tests.py
backend/config/migrations/: 0001_initial.py
backend/courses/: admin.py  admin_sections.py  apps.py  decorators.py  models.py  permissions.py  queries.py  serializers.py  signals.py  views.py
backend/courses/migrations/: 0001_initial.py  0002_alter_coursecategory_options_and_more.py  0003_alter_courseclass_end_date_and_more.py  0004_alter_coursetemplate_owner.py  0005_alter_course_categories.py  0006_alter_courseclass_course_template_and_more.py  0007_alter_enrollment_unique_together_studygroup_and_more.py  0008_courseclass_is_active.py  (+1 more)
backend/courseware/: admin.py  apps.py  decorators.py  forms.py  models.py  permissions.py  queries.py  serializers.py  signals.py  views.py
backend/enrollment/: admin.py  apps.py  decorators.py  models.py  pagination.py  queries.py  serializers.py  signals.py  views.py
backend/fixtures/: data.json  slim.json
backend/institution/: admin.py  models.py  queries.py  serializers.py  tests.py  views.py
backend/storage/: README.md  admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  signals.py  views.py
backend/user/: admin.py  decorators.py  forms.py  groups.py  models.py  queries.py  serializers.py  signals.py  tasks.py  tests.py  views.py
caddy/: Caddyfile
(+60 files in other folders)
